# ARRay-Tracing-VKRay-Samples

./: .gitignore  CMakeLists.txt  README.md
SDK/include/ARX/: ARVideoView.h
SDK/include/ARX/AR/: config.h
SDK/lib/: libARX.so.1.0.6
arxSource/ARX/ARG/: mtx.c
arxSource/build-linux-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
arxSource/build-linux-x86_64/ARX/: Makefile  cmake_install.cmake  libARX.so.1  libARX.so.1.0.6
arxSource/build-linux-x86_64/ARX/AR/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/AR2/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARG/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARUtil/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/Dummy/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/GStreamer/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/Image/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/Video4Linux2/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/ARVideo/libdc1394/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/KPM/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/ARX/OCVT/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/checkResolution/: Makefile  artoolkitx_checkResolution  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/check_id/: Makefile  artoolkitx_check_id  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/dispTexData/: Makefile  artoolkitx_dispTexData  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/genMarkerSet/: Makefile  artoolkitx_genMarkerSet  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/genTexData/: Makefile  artoolkitx_genTexData  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/image_database_2d/: Makefile  artoolkitx_image_database2d  cmake_install.cmake
arxSource/build-linux-x86_64/Utilities/mk_patt/: Makefile  artoolkitx_mk_patt  cmake_install.cmake
arxSource/build-linux-x86_64/depends/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/depends/common/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/depends/common/src/: Makefile  cmake_install.cmake
arxSource/build-linux-x86_64/depends/common/src/Eden/: Makefile  cmake_install.cmake
common/: obj_loader.h
ray_tracing__advance/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp  obj.hpp  offscreen.cpp  offscreen.hpp  raytrace.cpp  raytrace.hpp
ray_tracing__advance/shaders/: frag_shader.frag.spv  light_inf.rcall.spv  light_point.rcall.spv  light_spot.rcall.spv  passthrough.vert.spv  post.frag.spv  raytrace.rahit.spv  raytrace.rchit  raytrace.rchit.spv  raytrace.rgen  raytrace.rgen.spv  raytrace.rint.spv  raytrace.rmiss  raytrace.rmiss.spv  raytrace2.rahit.spv  raytrace2.rchit.spv  raytraceShadow.rmiss.spv  vert_shader.vert.spv
